Basic stylesheet and script files

--- a/default.hbs
+++ b/default.hbs
@@ -48,6 +48,7 @@
         <link rel="stylesheet" href="{{asset 'css/basics.css'}}" />
         <link rel="stylesheet" href="{{asset 'css/animate.css'}}" />
         <link rel="stylesheet" href="{{asset 'css/gist.css'}}" />
+        <link rel="stylesheet" href="{{asset 'css/vignette.css'}}" />
         <script src="{{asset 'js/html5shiv-printshiv.js'}}"></script>
         <script src="{{asset 'js/respond.js'}}"></script>
 
@@ -64,7 +65,7 @@
 
         {{! Deferred scripts }}
         <script src="{{asset 'js/fastclick.js'}}"></script>
-        <script src="{{asset 'js/phantom.js'}}"></script>
+        <script src="{{asset 'js/vignette.js'}}"></script>
 
     </body>
 </html>
