--- a/default.hbs
+++ b/default.hbs
@@ -59,7 +59,15 @@
 
     </head>
     <body class="{{body_class}}">
+        <div class="main">
             {{{body}}}
+        </div>
+        <footer>
+            <div class="container">
+                <h3 class="copyright"><span>Made by {{@blog.title}}.</span> <span>Powered by Ghost.</span></h3>
+                <a href="https://github.com/haydenbleasel/phantom" class="theme">Theme: Vignette by Hayden Bleasel</a>
+            </div>
+        </footer>
 
         {{ghost_foot}}
 
