--- a/post.hbs
+++ b/post.hbs
@@ -4,4 +4,44 @@
 
     {{> post-meta}}
 
+    <article {{#if @blog.cover}}style="background-image: url({{@blog.cover}})"{{/if}}>
+        <div class="container">
+            <header>
+                <h1 class="title">{{title}}</h1>
+                <h2 class="caption">
+                    Posted on <time datetime="{{date format='YYYY-MM-DD'}}">{{date format='MMMM DD, YYYY'}}</time> under {{tags}}.
+                </h2>
+            </header>
+            <div class="content">
+                {{content}}
+            </div>
+        </div>
+    </article>
+
+    <div class="meta clearfix">
+        <div class="container">
+            <div class="author clearfix">
+                {{#author}}
+                    <img src="{{image}}" alt="{{name}}" />
+                    <div class="info">
+                        <a href="{{url}}" class="name">{{name}}</a>
+                        <p class="bio">{{bio}}</p>
+                        <i>{{location}}</i>
+                    </div>
+                {{/author}}
+            </div>
+
+            <div class="share">
+                <p class="share-title">Share this article...</p>
+                <a id="twitter" href="http://twitter.com/share?text={{encode title}}&amp;url={{url absolute='true'}}"><span class="icon-twitter"></span></a>
+                <a id="facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute='true'}}"><span class="icon-facebook"></span></a>
+                <a id="google-plus" href="https://plus.google.com/share?url={{url absolute='true'}}"><span class="icon-googleplus"></span></a>
+            </div>
+
+        </div>
+
+    </div>
+
+    {{!> featured}}
+
 {{/post}}
