Created index page, fixed featured image hack

--- a/assets/css/vignette.css
+++ b/assets/css/vignette.css
@@ -65,7 +65,7 @@ article {
 	opacity: 0;
 }
 
-article, .meta, footer {
+.wrapper {
 	padding-left: 10%;
 	padding-right: 10%;
 }
@@ -137,7 +137,7 @@ p {
     column-gap: 30px;
 }
 
-.meta {
+.meta, .excerpts {
 	padding-top: 120px;
 	padding-bottom: 120px;
 	background: #f5f5f5;
@@ -181,20 +181,31 @@ p {
 	margin-left: 60px;
 }
 
+.share a, .excerpt a {
+	color: #262946;
+	opacity: 0.6;
+}
+
 .share a {
     text-decoration: none;
     font-size: 24px;
-	opacity: 0.6;
 	margin-right: 5px;
-	color: #262946;
 }
 
 .share a:last-child {
 	margin-right: 0;
 }
 
-.share a:hover {
+.share a:hover, .excerpt:last-child a:hover {
     opacity: 1;
+}
+
+.excerpt {
+	margin: 30px 0;
+}
+
+.excerpt a {
+	display: block;
 }
 
 footer {
@@ -235,5 +246,9 @@ footer a:hover {
 	}
 	article {
 		padding: 60px 10%;
+	}
+	.meta, .excerpts {
+		padding-top: 60px;
+		padding-bottom: 60px;
 	}
 }
