--- a/default.hbs
+++ b/default.hbs
@@ -62,7 +62,7 @@
         <div class="main">
             {{{body}}}
         </div>
-        <footer>
+        <footer class="wrapper">
             <div class="container">
                 <h3 class="copyright"><span>Made by {{@blog.title}}.</span> <span>Powered by Ghost.</span></h3>
                 <a href="https://github.com/haydenbleasel/phantom" class="theme">Theme: Vignette by Hayden Bleasel</a>
