--- a/partials/featured.hbs
+++ b/partials/featured.hbs
@@ -2,10 +2,12 @@
     var image = document.querySelectorAll("article img:first-child")[0],
         src = image.src,
         parent = image.parentNode;
-        header = document.getElementsByTagName("header")[0],
+        article = document.getElementsByTagName("article")[0],
+        blur = document.getElementsByClassName("article-blur")[0],
         facebook = document.querySelectorAll("meta[property='og:image']")[0],
         twitter = document.querySelectorAll("meta[property='twitter:image']")[0];
-    header.style.backgroundImage = 'url(' + src + ')';
+    article.style.backgroundImage = 'url(' + src + ')';
+    blur.style.backgroundImage = 'url(' + src + ')';
     if (facebook) { facebook.setAttribute("content", src); }
     if (twitter) { twitter.setAttribute("content", src); }
     image.id = "remove-this";
