--- a/post.hbs
+++ b/post.hbs
@@ -4,7 +4,7 @@
 
     {{> post-meta}}
 
-    <article {{#if @blog.cover}}style="background-image: url({{@blog.cover}})"{{/if}}>
+    <article class="wrapper" {{#if @blog.cover}}style="background-image: url({{@blog.cover}})"{{/if}}>
         <div class="article-blur" {{#if @blog.cover}}style="background-image: url({{@blog.cover}})"{{/if}}></div>
         <div class="container">
             <header>
@@ -19,7 +19,7 @@
         </div>
     </article>
 
-    <div class="meta clearfix">
+    <div class="meta wrapper clearfix">
         <div class="container">
             <div class="author clearfix">
                 {{#author}}
@@ -43,6 +43,6 @@
 
     </div>
 
-    {{!> featured}}
+    {{> featured}}
 
 {{/post}}
