Created tag page, fixed index

--- a/assets/css/vignette.css
+++ b/assets/css/vignette.css
@@ -45,6 +45,11 @@ article, .article-blur {
 	background-size: cover;
 }
 
+section {
+	padding-top: 200px;
+	padding-bottom: 60px;
+}
+
 article {
     color: #fff;
 	padding-top: 200px;
@@ -102,8 +107,12 @@ h2.caption {
 	font-size: 20px;
 	line-height: 25px;
 	margin: 10px 0 80px 0;
-	color: #D8D8DA;
 	letter-spacing: -0.5px;
+	color: #999;
+}
+
+article h2.caption {
+	color: #D8D8DA;
 }
 
 h3 {
@@ -137,11 +146,10 @@ p {
     column-gap: 30px;
 }
 
-.meta, .excerpts {
+.meta {
 	padding-top: 120px;
 	padding-bottom: 120px;
 	background: #f5f5f5;
-	border-bottom: 1px solid #ddd;
 }
 
 .author {
@@ -200,8 +208,12 @@ p {
     opacity: 1;
 }
 
+.excerpts {
+	padding-bottom: 100px;
+}
+
 .excerpt {
-	margin: 30px 0;
+	margin: 60px 0;
 }
 
 .excerpt a {
@@ -211,6 +223,7 @@ p {
 footer {
 	padding-top: 60px;
 	padding-bottom: 60px;
+	border-top: 1px solid #ddd;
 }
 
 footer a {
@@ -247,8 +260,19 @@ footer a:hover {
 	article {
 		padding: 60px 10%;
 	}
-	.meta, .excerpts {
+	section {
+		padding-top: 60px;
+		padding-bottom: 0;
+	}
+	.meta {
 		padding-top: 60px;
 		padding-bottom: 60px;
+	}
+	.excerpts {
+		padding-bottom: 30px;
+	}
+	footer {
+		padding-top: 30px;
+		padding-bottom: 30px;
 	}
 }
