--- a/tag.hbs
+++ b/tag.hbs
@@ -1,1 +1,12 @@
 {{!< default}}
+
+<section class="wrapper">
+    <div class="container">
+        <header>
+            <h1 class="title">{{tag.name}}</h1>
+            <h2 class="caption">A collection with {{plural pagination.total empty="No posts" singular="% article" plural="% articles"}}.</h2>
+        </header>
+    </div>
+</section>
+
+{{> excerpts}}
