--- a/index.hbs
+++ b/index.hbs
@@ -2,14 +2,13 @@
 
 {{> index-meta}}
 
-<article class="wrapper" {{#if @blog.cover}}style="background-image: url({{@blog.cover}})"{{/if}}>
-    <div class="article-blur" {{#if @blog.cover}}style="background-image: url({{@blog.cover}})"{{/if}}></div>
+<section class="wrapper">
     <div class="container">
         <header>
             <h1 class="title">{{@blog.title}}</h1>
             <h2 class="caption">{{@blog.description}}</h2>
         </header>
     </div>
-</article>
+</section>
 
 {{> excerpts}}
