Created page and author pages, fixes

--- a/author.hbs
+++ b/author.hbs
@@ -1,1 +1,14 @@
 {{!< default}}
+
+<section class="wrapper">
+    <div class="container">
+        <header>
+            {{#author}}
+                <h1 class="title">{{name}}</h1>
+                <h2 class="caption">{{bio}}</h2>
+            {{/author}}
+        </header>
+    </div>
+</section>
+
+{{> excerpts}}
