--- a/post.hbs
+++ b/post.hbs
@@ -5,7 +5,7 @@
     {{> post-meta}}
 
     <article class="wrapper" {{#if @blog.cover}}style="background-image: url({{@blog.cover}})"{{/if}}>
-        <div class="article-blur" {{#if @blog.cover}}style="background-image: url({{@blog.cover}})"{{/if}}></div>
+        <div class="article-blur" id="blur" {{#if @blog.cover}}style="background-image: url({{@blog.cover}})"{{/if}}></div>
         <div class="container">
             <header>
                 <h1 class="title">{{title}}</h1>
