Remove unused font

--- a/assets/css/vignette.css
+++ b/assets/css/vignette.css
@@ -34,7 +34,7 @@
 }
 
 body {
-	font-family: 'FF Meta Serif', 'Georgia', 'Times New Roman', Times, serif;
+	font-family: 'Georgia', 'Times New Roman', Times, serif;
 	line-height: 1.5;
 }
 
