--- a/post.hbs
+++ b/post.hbs
@@ -18,7 +18,7 @@
 
         <footer id="post-meta" class="clearfix">
             <div><span>Posted on </span> <time class="dates" datetime="{{date format='YYYY-MM-DD'}}">{{date format='MMM D, YYYY'}}</time></div>
-            <div><span>Written by</span> {{author}}</div>
+            <!--<div><span>Written by</span> {{author}}</div>-->
             <div><span>Tagged under</span> {{tags}}</div>
             {{> share}}
         </footer>
