Tweak CSS and update post.

--- a/content/themes/ghost-themes/assets/css/cactus.css
+++ b/content/themes/ghost-themes/assets/css/cactus.css
@@ -161,9 +161,8 @@ em, i {
 
 header h1 {
   font-size: 30px;
-  letter-spacing: -1px;
   color: #222;
-  font-weight: bold;
+  font-weight: 300;
 }
 
 h2 {
