--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -23,7 +23,7 @@
 
         {{! OpenGraph for Facebook }}
         <meta property="og:title" content="{{meta_title}}" />
-        <meta property="og:image" content="{{@blog.url}}/assets/images/open-graph.png?v=2" />
+        <meta property="og:image" content="{{@blog.url}}/assets/images/open-graph.png" />
         <meta property="og:locale" content="en_US" />
 
         {{! Twitter Card }}
@@ -32,9 +32,9 @@
         {{#if @blog.cover}}<meta property="twitter:image" content="{{@blog.cover}}" />{{/if}}
 
         {{! Icons }}
-        <link rel="icon" href="{{asset 'favicon.ico?v=2'}}" />
-        <link rel="icon" sizes="196x196" href="{{asset 'images/android-homescreen.png?v=2'}}" />
-        <link rel="apple-touch-icon" href="{{asset 'images/apple-touch-icon.png?v=2'}}" />
+        <link rel="icon" href="{{asset 'favicon.ico'}}" />
+        <link rel="icon" sizes="196x196" href="{{asset 'images/android-homescreen.png'}}" />
+        <link rel="apple-touch-icon" href="{{asset 'images/apple-touch-icon.png'}}" />
 
         {{! Prerendering and Prefetching }}
         {{#if @blog.cover}}
