Write new post.

--- a/content/themes/ghost-themes/assets/css/cactus.css
+++ b/content/themes/ghost-themes/assets/css/cactus.css
@@ -313,9 +313,12 @@ thead th, th {
 }
 
 img {
-  width: 100%;
-  max-width: 100%;
   border-radius: 3px;
+}
+
+#post-body img {
+  display: block;
+  margin: 1em auto;
 }
 
 #badge {
