--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -32,7 +32,7 @@
         {{#if @blog.cover}}<meta property="twitter:image" content="{{@blog.cover}}" />{{/if}}
 
         {{! Icons }}
-        <link rel="icon" href="{{asset 'favicon.ico'}}" />
+        <link rel="icon" href="{{asset 'images/favicon.ico'}}" />
         <link rel="icon" sizes="196x196" href="{{asset 'images/android-homescreen.png'}}" />
         <link rel="apple-touch-icon" href="{{asset 'images/apple-touch-icon.png'}}" />
 
