Fix home link bug.

--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -60,7 +60,7 @@
 
       <section id="wrapper">
         <header id="header">
-          <a id="title" class="index" href="{{@blog.url}}">
+          <a id="title" class="index" href="/">
             <img class="avatar" src="{{@blog.logo}}" alt="{{@blog.title}}">
             <h1>{{@blog.title}}</h1>
           </a>
