Install Google Analytics and Disqus.

--- a/content/themes/ghost-themes/partials/comments.hbs
+++ b/content/themes/ghost-themes/partials/comments.hbs
@@ -4,7 +4,7 @@
 </section>
 
 <script type="text/javascript">
-    var disqus_shortname = 'YOUR_SHORTNAME_HERE';
+    var disqus_shortname = 'zackphilipps';
     var disqus_title = '{{title}}';
     var disqus_identifier = '{{id}}';
     (function() {
