--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -50,6 +50,15 @@
         <script src="{{asset 'js/html5shiv-printshiv.js'}}"></script>
         <script src="{{asset 'js/respond.js'}}"></script>
 
+        <script>
+				    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+				    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+				    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+				    e.src='//www.google-analytics.com/analytics.js';
+				    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+				    ga('create','UA-61068113-1');ga('send','pageview');
+				</script>
+
         {{! Page-Specific Metadata }}
         {{{block "meta"}}}
 
