Tweak theme a bit.

--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -73,7 +73,7 @@
             <img class="avatar" src="{{@blog.logo}}" alt="{{@blog.title}}">
             <h1>{{@blog.title}}</h1>
           </a>
-          <p class="header-description">Executive Director at <a href="//tribeswell.com">Tribeswell</a>. Co-Creator of <a href="//scratchtheme.com">Scratch Theme for WordPress + ACF</a>. Lover of all things design, tech, music, and coffee.</p>
+          <p class="header-description">Executive Director at <a href="//tribeswell.com">Tribeswell</a>. Co-Creator of <a href="//scratchtheme.com">Scratch</a>. Lover of all things design, tech, music, and coffee.</p>
         </header>
 
         {{{body}}}
