--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -19,7 +19,7 @@
 
         {{! Robots and Viewport }}
         <meta name="robots" content="index, follow" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         {{! OpenGraph for Facebook }}
         <meta property="og:title" content="{{meta_title}}" />
