Edit meta tags.

--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en-US">
     <head>
 
         {{! Document settings and metadata }}
@@ -7,11 +7,11 @@
         <meta charset="utf-8" />
         <meta name="designer" content="Hayden Bleasel" />
         <meta name="rating" content="general" />
-        <meta name="keywords" content="ghost, blog, {{meta_title}}" />
+        <meta name="keywords" content="{{meta_title}}, web, front end, designer, developer, blog" />
 
         {{! iOS, Android and Windows stuff }}
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="white" />
         <meta name="format-detection" content="telephone=yes" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="msapplication-TileImage" content="{{asset 'images/windows-tile.png'}}" />
