--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -11,7 +11,7 @@
 
         {{! iOS, Android and Windows stuff }}
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="white" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta name="format-detection" content="telephone=yes" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="msapplication-TileImage" content="{{asset 'images/windows-tile.png'}}" />
@@ -31,6 +31,11 @@
         <meta property="twitter:title" content="{{meta_title}}" />
         {{#if @blog.cover}}<meta property="twitter:image" content="{{@blog.cover}}" />{{/if}}
 
+        {{! Page-Specific Metadata }}
+        {{{block "meta"}}}
+
+        {{ghost_head}}
+
         {{! Icons }}
         <link rel="icon" href="{{asset 'images/favicon.ico'}}" />
         <link rel="icon" sizes="196x196" href="{{asset 'images/android-homescreen.png'}}" />
@@ -47,6 +52,7 @@
         <link rel="stylesheet" href="{{asset 'css/basics.css'}}" />
         <link rel="stylesheet" href="{{asset 'css/gist.css'}}" />
         <link rel="stylesheet" href="{{asset 'css/cactus.css'}}" />
+        <link rel="stylesheet" href="{{asset 'css/ionicons.min.css'}}" />
         <script src="{{asset 'js/html5shiv-printshiv.js'}}"></script>
         <script src="{{asset 'js/respond.js'}}"></script>
 
@@ -59,11 +65,6 @@
 				    ga('create','UA-61068113-1');ga('send','pageview');
 				</script>
 
-        {{! Page-Specific Metadata }}
-        {{{block "meta"}}}
-
-        {{ghost_head}}
-
     </head>
     <body class="{{body_class}}">
 
@@ -73,7 +74,18 @@
             <img class="avatar" src="{{@blog.logo}}" alt="{{@blog.title}}">
             <h1>{{@blog.title}}</h1>
           </a>
-          <p class="header-description">Executive Director at <a href="//tribeswell.com">Tribeswell</a>. Co-Creator of <a href="//scratchtheme.com">Scratch</a>. Lover of all things design, tech, music, and coffee.</p>
+          <p class="header-description">Executive Director at <a href="//tribeswell.com">Tribeswell</a>. Co-Creator of <a href="//scratchtheme.com">Scratch</a>. Lover of all things design, tech, music, and coffee. Say <a href="mailto:hello@zackphilipps.com">hello</a> or
+	          <a href="//twitter.com/zackphilipps">
+		          <i class="ion-social-twitter"></i>
+	          </a>
+	          <a href="//linkedin.com/in/zackphilipps">
+		          <i class="ion-social-linkedin"></i>
+	          </a>
+	          <a href="//github.com/zackphilipps">
+		          <i class="ion-social-octocat"></i>.
+	          </a>
+          </p>
+
         </header>
 
         {{{body}}}
