Add some moar Twitter card data.

--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -30,6 +30,8 @@
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:title" content="{{meta_title}}" />
         {{#if @blog.cover}}<meta property="twitter:image" content="{{@blog.cover}}" />{{/if}}
+        <meta name="twitter:site" content="@zackphilipps">
+				<meta name="twitter:creator" content="@zackphilipps">
 
         {{! Page-Specific Metadata }}
         {{{block "meta"}}}
