--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -27,7 +27,7 @@
         <meta property="og:locale" content="en_US" />
 
         {{! Twitter Card }}
-        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:card" content="summary" />
         <meta property="twitter:title" content="{{meta_title}}" />
         {{#if @blog.cover}}<meta property="twitter:image" content="{{@blog.cover}}" />{{/if}}
         <meta name="twitter:site" content="@zackphilipps">
