Add tumblr link.

--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -77,6 +77,9 @@
             <h1>{{@blog.title}}</h1>
           </a>
           <p class="header-description">Executive Director at <a href="//tribeswell.com">Tribeswell</a>. Co-Creator of <a href="//scratchtheme.com">Scratch</a>. Lover of all things design, tech, music, and coffee. Say <a href="mailto:hello@zackphilipps.com">hello</a> or
+            <a href="//zackphilipps.tumblr.com">
+		          <i class="ion-social-tumblr"></i>
+	          </a>
 	          <a href="//twitter.com/zackphilipps">
 		          <i class="ion-social-twitter"></i>
 	          </a>
@@ -84,8 +87,7 @@
 		          <i class="ion-social-linkedin"></i>
 	          </a>
 	          <a href="//github.com/zackphilipps">
-		          <i class="ion-social-octocat"></i>.
-	          </a>
+		          <i class="ion-social-octocat"></i></a>.
           </p>
 
         </header>
