--- a/content/themes/ghost-themes/assets/css/cactus.css
+++ b/content/themes/ghost-themes/assets/css/cactus.css
@@ -96,6 +96,12 @@ a,
   color: #5694f1;
 }
 
+a, #post-list li .dates {
+  -webkit-transition: ease-in-out color 0.25s;
+  -moz-transition: ease-in-out color 0.25s;
+  transition: ease-in-out color 0.25s;
+}
+
 p a {
   color: #5694f1;
 }
