Update header and blockquote styles.

--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -76,7 +76,7 @@
             <img class="avatar" src="{{@blog.logo}}" alt="{{@blog.title}}">
             <h1>{{@blog.title}}</h1>
           </a>
-          <p class="header-description">Executive Director at <a href="//tribeswell.com">Tribeswell</a>. Co-Creator of <a href="//scratchtheme.com">Scratch</a>. Lover of all things design, tech, music, and coffee. Say <a href="mailto:hello@zackphilipps.com">hello</a> or
+          <p class="header-description">Executive Director at <a href="//tribeswell.com">Tribeswell</a>. Co-Creator of <a href="//scratchtheme.com">Scratch</a>. Lover of all things design, tech, music, and equality. Say <a href="mailto:hello@zackphilipps.com">hello</a> or
             <a href="//zackphilipps.tumblr.com">
 		          <i class="ion-social-tumblr"></i>
 	          </a>
