Make some tweaks and write new blog post.

--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -76,18 +76,21 @@
             <img class="avatar" src="{{@blog.logo}}" alt="{{@blog.title}}">
             <h1>{{@blog.title}}</h1>
           </a>
-          <p class="header-description">Executive Director at <a href="//tribeswell.com">Tribeswell</a>. Co-Creator of <a href="//scratchtheme.com">Scratch</a>. Lover of all things design, tech, music, and equality. Say <a href="mailto:hello@zackphilipps.com">hello</a> or
-            <a href="//zackphilipps.tumblr.com">
+          <p class="header-description">Executive Director at <a href="//tribeswell.com" target="_blank">Tribeswell</a>. Co-Creator of <a href="//scratchtheme.com" target="_blank">Scratch</a>. Lover of all things design, tech, music, and equality. Say <a href="mailto:hello@zackphilipps.com">hello</a> or
+            <a href="//zackphilipps.tumblr.com" target="_blank">
 		          <i class="ion-social-tumblr"></i>
 	          </a>
-	          <a href="//twitter.com/zackphilipps">
+	          <a href="//twitter.com/zackphilipps" target="_blank">
 		          <i class="ion-social-twitter"></i>
 	          </a>
-	          <a href="//linkedin.com/in/zackphilipps">
+	          <a href="//linkedin.com/in/zackphilipps" target="_blank">
 		          <i class="ion-social-linkedin"></i>
 	          </a>
-	          <a href="//github.com/zackphilipps">
+	          <a href="//github.com/zackphilipps" target="_blank">
 		          <i class="ion-social-octocat"></i></a>.
+          </p>
+          <p class="header-description">
+          	Fresh <a href="/tag/dev-stuff/">dev stuff</a> and/or <a href="/tag/life-stuff/">life stuff</a> every Friday.
           </p>
 
         </header>
