Edit some posts and site header, start working on new post.

--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -89,9 +89,9 @@
 	          <a href="//github.com/zackphilipps" target="_blank">
 		          <i class="ion-social-octocat"></i></a>.
           </p>
-          <p class="header-description">
+          {{!-- <p class="header-description">
           	Fresh <a href="/tag/dev-stuff/">dev stuff</a> and/or <a href="/tag/life-stuff/">life stuff</a> every Friday.
-          </p>
+          </p> --}}
 
         </header>
 
