--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -70,26 +70,24 @@
     </head>
     <body class="{{body_class}}">
 
+      <a href="http://portfolio.zackphilipps.com" id="docs">View My Portfolio</a>
+
       <section id="wrapper">
         <header id="header">
           <a id="title" class="index" href="/">
             <img class="avatar" src="{{@blog.logo}}" alt="{{@blog.title}}">
             <h1>{{@blog.title}}</h1>
           </a>
-          <p class="header-description">Executive Director at <a href="//tribeswell.com" target="_blank">Tribeswell</a>. Co-Creator of <a href="//scratchtheme.com" target="_blank">Scratch</a>. Lover of all things design, tech, music, and equality. Say <a href="mailto:hello@zackphilipps.com">hello</a> or
-	          <a href="//twitter.com/zackphilipps" target="_blank">
+          <p class="header-description">Executive Director at <a href="http://tribeswell.com" target="_blank">Tribeswell</a>.<br>Co-Creator of <a href="http://scratchtheme.com" target="_blank">Scratch</a>.<br>Say <a href="mailto:hello@zackphilipps.com">hello</a> or
+	          <a href="http://twitter.com/zackphilipps" target="_blank">
 		          <i class="ion-social-twitter"></i>
 	          </a>
-	          <a href="//linkedin.com/in/zackphilipps" target="_blank">
+	          <a href="http://linkedin.com/in/zackphilipps" target="_blank">
 		          <i class="ion-social-linkedin"></i>
 	          </a>
-	          <a href="//github.com/zackphilipps" target="_blank">
+	          <a href="http://github.com/zackphilipps" target="_blank">
 		          <i class="ion-social-octocat"></i></a>.
           </p>
-          {{!-- <p class="header-description">
-          	Fresh <a href="/tag/dev-stuff/">dev stuff</a> and/or <a href="/tag/life-stuff/">life stuff</a> every Friday.
-          </p> --}}
-
         </header>
 
         {{{body}}}
