--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -93,9 +93,9 @@
         {{{body}}}
 
         <footer id="footer">
-            <!-- <p class="small">
-                <a href="https://github.com/haydenbleasel/phantom">Theme: Cactus by Hayden Bleasel</a>
-            </p> -->
+          <p class="small">
+            © Zack Philipps
+          </p>
         </footer>
 
       </section>
