Add mobile portfolio link and start new post

--- a/content/themes/ghost-themes/assets/css/cactus.css
+++ b/content/themes/ghost-themes/assets/css/cactus.css
@@ -685,10 +685,7 @@ Author
   }
 }
 
-#docs {
-  position: fixed;
-  top: 8px;
-  right: 6px;
+#docs, #docs-mobile {
   background: #5badf0;
   color: #fff;
   padding: 8px 12px;
@@ -696,12 +693,28 @@ Author
   font-weight: bold;
   line-height: 1.35;
   border-radius: 3px;
+}
+
+#docs {
+  position: fixed;
+  top: 8px;
+  right: 6px;
   z-index: 100;
+}
+
+#docs-mobile {
+  display: none;
+  text-align: center;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 440px) {
   a#docs {
     display: none;
+  }
+
+  #docs-mobile {
+    display: inline-block;
   }
 }
 
