--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -88,6 +88,9 @@
 	          <a href="http://github.com/zackphilipps" target="_blank">
 		          <i class="ion-social-octocat"></i></a>.
           </p>
+          <p>
+          	<a href="http://portfolio.zackphilipps.com" id="docs-mobile">View My Portfolio</a>
+          </p>
         </header>
 
         {{{body}}}
