--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -78,7 +78,7 @@
             <img class="avatar" src="{{@blog.logo}}" alt="{{@blog.title}}">
             <h1>{{@blog.title}}</h1>
           </a>
-          <p class="header-description">Executive Director at <a href="http://tribeswell.com" target="_blank">Tribeswell</a>.<br>Co-Creator of <a href="http://scratchtheme.com" target="_blank">Scratch</a>.<br>Say <a href="mailto:hello@zackphilipps.com">hello</a> or
+          <p class="header-description">Development Lead at <a href="http://elementthree.com" target="_blank">Element Three</a>.<br>Co-Creator of <a href="http://scratchtheme.com" target="_blank">Scratch</a>.<br>Say <a href="mailto:hello@zackphilipps.com">hello</a> or
 	          <a href="http://twitter.com/zackphilipps" target="_blank">
 		          <i class="ion-social-twitter"></i>
 	          </a>
