--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -4,34 +4,22 @@
 
         {{! Document settings and metadata }}
         <title>{{meta_title}}</title>
-        <meta charset="utf-8" />
-        <meta name="designer" content="Hayden Bleasel" />
-        <meta name="rating" content="general" />
-        <meta name="keywords" content="{{meta_title}}, web, front end, designer, developer, blog" />
+        <meta charset="utf-8">
+        <meta name="designer" content="Hayden Bleasel">
+        <meta name="rating" content="general">
+        <meta name="keywords" content="{{meta_title}}, web, front end, designer, developer, blog">
 
         {{! iOS, Android and Windows stuff }}
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-        <meta name="format-detection" content="telephone=yes" />
-        <meta name="mobile-web-app-capable" content="yes" />
-        <meta name="msapplication-TileImage" content="{{asset 'images/windows-tile.png?v=2'}}" />
-        <meta name="msapplication-TileColor" content="#262A2D" />
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="format-detection" content="telephone=yes">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="msapplication-TileImage" content="{{asset 'images/windows-tile.png?v=2'}}">
+        <meta name="msapplication-TileColor" content="#262A2D">
 
         {{! Robots and Viewport }}
-        <meta name="robots" content="index, follow" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-        {{! OpenGraph for Facebook }}
-        <meta property="og:title" content="{{meta_title}}" />
-        <meta property="og:image" content="{{@blog.url}}/assets/images/open-graph.png?v=2" />
-        <meta property="og:locale" content="en_US" />
-
-        {{! Twitter Card }}
-        <meta property="twitter:card" content="summary" />
-        <meta property="twitter:title" content="{{meta_title}}" />
-        {{#if @blog.cover}}<meta property="twitter:image" content="{{@blog.cover}}" />{{/if}}
-        <meta name="twitter:site" content="@zackphilipps">
-				<meta name="twitter:creator" content="@zackphilipps">
+        <meta name="robots" content="index, follow">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         {{! Page-Specific Metadata }}
         {{{block "meta"}}}
@@ -39,22 +27,22 @@
         {{ghost_head}}
 
         {{! Icons }}
-        <link rel="icon" href="{{asset 'images/favicon.ico?v=2'}}" />
-        <link rel="icon" sizes="196x196" href="{{asset 'images/android-homescreen.png?v=2'}}" />
-        <link rel="apple-touch-icon" href="{{asset 'images/apple-touch-icon.png?v=2'}}" />
+        <link rel="icon" href="{{asset 'images/favicon.ico?v=2'}}">
+        <link rel="icon" sizes="196x196" href="{{asset 'images/android-homescreen.png?v=2'}}">
+        <link rel="apple-touch-icon" href="{{asset 'images/apple-touch-icon.png?v=2'}}">
 
         {{! Prerendering and Prefetching }}
         {{#if @blog.cover}}
-            <link rel="prerender" href="{{@blog.cover}}" />
-            <link rel="prefetch" href="{{@blog.cover}}" />
+            <link rel="prerender" href="{{@blog.cover}}">
+            <link rel="prefetch" href="{{@blog.cover}}">
         {{/if}}
 
         {{! Scripts and Stylesheets }}
-        <link rel="stylesheet" href="{{asset 'css/normalize.css'}}" />
-        <link rel="stylesheet" href="{{asset 'css/basics.css'}}" />
-        <link rel="stylesheet" href="{{asset 'css/gist.css'}}" />
-        <link rel="stylesheet" href="{{asset 'css/cactus.css'}}" />
-        <link rel="stylesheet" href="{{asset 'css/ionicons.min.css'}}" />
+        <link rel="stylesheet" href="{{asset 'css/normalize.css'}}">
+        <link rel="stylesheet" href="{{asset 'css/basics.css'}}">
+        <link rel="stylesheet" href="{{asset 'css/gist.css'}}">
+        <link rel="stylesheet" href="{{asset 'css/cactus.css'}}">
+        <link rel="stylesheet" href="{{asset 'css/ionicons.min.css'}}">
         <script src="{{asset 'js/html5shiv-printshiv.js'}}"></script>
         <script src="{{asset 'js/respond.js'}}"></script>
 
