--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -66,7 +66,11 @@
             <img class="avatar" src="{{@blog.logo}}" alt="{{@blog.title}}">
             <h1>{{@blog.title}}</h1>
           </a>
-          <p class="header-description">Development Lead at <a href="http://elementthree.com" target="_blank">Element Three</a>.<br>Co-Creator of <a href="http://scratchtheme.com" target="_blank">Scratch</a>.<br>Say <a href="mailto:hello@zackphilipps.com">hello</a> or
+          <p class="header-description">
+            Development Lead at <a href="http://elementthree.com" target="_blank">Element Three</a>.<br>
+            Software Engineer at <a href="https://www.toptal.com/#get-only-accomplished-computer-engineers-now" target="_blank">Toptal</a>.<br>
+            Co-Creator of <a href="http://scratchtheme.com" target="_blank">Scratch</a>.<br>
+            Say <a href="mailto:hello@zackphilipps.com">hello</a> or
 	          <a href="http://twitter.com/zackphilipps" target="_blank">
 		          <i class="ion-social-twitter"></i>
 	          </a>
