Add cookie tracking blog post and tweak styles

--- a/content/themes/ghost-themes/assets/css/cactus.css
+++ b/content/themes/ghost-themes/assets/css/cactus.css
@@ -155,7 +155,8 @@ header h1 {
   font-size: 30px;
   color: #222;
   font-weight: 300;
-  letter-spacing: -1px;
+  /*letter-spacing: -1px;*/
+  line-height: 34px;
 }
 
 h2 {
