--- a/content/themes/ghost-themes/assets/css/gist.css
+++ b/content/themes/ghost-themes/assets/css/gist.css
@@ -1,2 +1,39 @@
 /*! Logistics v1.2.0 */
-.gist .gist-file{background:#f2f3f4!important;border-radius:8px!important;border:1px solid #ddd!important;margin-bottom:0!important}.gist .gist-file .gist-data{background:transparent!important;border-bottom:0!important}.gist .gist-file .gist-data td.line-data{padding:20px!important}.gist .gist-meta,.gist .line-numbers{display:none!important}.gist .gist-data span,.gist pre{font-size:14px!important;line-height:24px!important;font-weight:400!important;color:#777!important}
+.gist .gist-file {
+  background: #f2f3f4!important;
+  border-radius: 4px!important;
+  border: 1px solid #ddd!important;
+  margin-bottom: 0 !important;
+}
+
+.gist .blob-wrapper {
+  border-bottom-right-radius: 4px !important;
+  border-bottom-left-radius: 4px !important;
+}
+
+.gist .gist-file .gist-data {
+  background: transparent!important;
+  border-bottom: 0!important;
+}
+
+.gist .gist-file .gist-data td.line-data {
+  padding: 20px !important;
+}
+
+/*.gist .gist-meta,*/
+.gist .blob-num {
+  display: none!important;
+}
+
+.gist .gist-data span,
+.gist pre,
+.gist .blob-code {
+  font-size: 14px!important;
+  line-height: 24px!important;
+  font-weight: 400!important;
+  color: #777!important;
+}
+
+.gist {
+  margin-bottom: 25px;
+}
