--- a/content/themes/ghost-themes/partials/share.hbs
+++ b/content/themes/ghost-themes/partials/share.hbs
@@ -1,6 +1,6 @@
 <section id="sharing">
 
-    <a id="twitter" href="http://twitter.com/share?text={{encode title}}%20via%20@callmebusiness&amp;url={{url absolute='true'}}"><span class="icon-twitter"></span></a>
+    <a id="twitter" href="http://twitter.com/share?text={{encode title}}%20via%20@zackphilipps&amp;url={{url absolute='true'}}"><span class="icon-twitter"></span></a>
 
     <a id="facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute='true'}}"><span class="icon-facebook"></span></a>
 
