Temp remove portfolio cta

--- a/content/themes/ghost-themes/default.hbs
+++ b/content/themes/ghost-themes/default.hbs
@@ -57,7 +57,7 @@
   </head>
   <body class="{{body_class}}">
 
-    <a href="http://portfolio.zackphilipps.com" id="docs">View My Portfolio</a>
+    {{!-- <a href="http://portfolio.zackphilipps.com" id="docs">View My Portfolio</a> --}}
 
     <section id="wrapper">
       <header id="header">
@@ -82,9 +82,9 @@
             <ion-icon name="ios-mail"></ion-icon>
           </a>
         </p>
-        <p>
+        {{!-- <p>
           <a href="http://portfolio.zackphilipps.com" id="docs-mobile">View My Portfolio</a>
-        </p>
+        </p> --}}
       </header>
 
       {{{body}}}
